fixes visibility of country-selecter-dropdown in IE6/7 #2992

--- a/css/v03/header.less
+++ b/css/v03/header.less
@@ -18,6 +18,9 @@
 	position: relative;
 	margin: auto;
 }
+.lt-ie8 .heading .heading-holder {
+	z-index: 999;
+}
 
 .heading-second .heading-holder  { /* allows mobile menu to absolute it's way to the top */
   position: static;
